# nrfmodule-sdk

./: .gitignore  CMakeLists.txt  README.md  west.yml
.github/: copilot-instructions.md
boards/arm/beescales_bt/: CMakeLists.txt  Kconfig.beescales_bt  Kconfig.defconfig  beescales_bt_nrf52840-pinctrl.dtsi  beescales_bt_nrf52840.dts  beescales_bt_nrf52840.yaml  beescales_bt_nrf52840_defconfig  board.c  board.cmake  board.yml  board_power.c
boards/arm/livetracker/: CMakeLists.txt  Kconfig.defconfig  Kconfig.livetracker  board.c  board.cmake  board.yml  board_power.c  livetracker_nrf52840-pinctrl.dtsi  livetracker_nrf52840.dts  livetracker_nrf52840.yaml  livetracker_nrf52840_defconfig  livetracker_nrf9151-pinctrl.dtsi  livetracker_nrf9151.dts  livetracker_nrf9151.yaml  livetracker_nrf9151_ns.dts  livetracker_nrf9151_ns.yaml  livetracker_nrf9151_ns_defconfig
drivers/sensor/bmp390/: Kconfig  bmp390.c  bmp390.h  bmp390_i2c.c
dts/bindings/gnss/: quectel,l76.yaml
include/: modem_core.h  nrf_modem.h  nrf_modem_at.h  nrf_modem_lib.h  nrf_socket.h  nrfmodule_ble_log_backend.h  nrfmodule_http.h  nrfmodule_mqtt.h  sm_at_client.h  sm_modem_power_mgmt.h
include/drivers/gnss/: gnss_assist.h  gnss_extended.h
include/led/: led_arbiter.h  led_effect.h  rgb_led.h
lib/led/: Kconfig  led_arbiter.c  led_effect.c  rgb_led.c
scripts/: run_test.py
tests/led_arbiter/: CMakeLists.txt  testcase.yaml
tests/led_arbiter/src/: main.c
tests/led_effect/: CMakeLists.txt  prj.conf  testcase.yaml
tests/led_effect/src/: main.c
zephyr/: Kconfig  linker_data.ld  module.yml
